@@ -1,6 +1,7 @@
 3.0.0.pre.1
-* Adds support for recursive references
-* Removed REST api support from `Client`
+* Adds support for recursive references.
+* Removed REST api support from `Client`.
+* Added `abort` function.
 
 2.4.0
 * Handle HTTP errors 502 and 504 as `Fauna::UnavailableError`.
